src/test/parse-fail/bound-single-question-mark.rs
// compile-flags: -Z parse-only

fn f<T: ?>() {} //~ ERROR expected identifier, found `>`
